--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Rhys
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: I like gaming
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://icons-for-free.com/free-icons/png/512/479477.png
 
 #
 # Flags below are optional
